Fix transparency issue when viewing product on mobile
Previously, if viewing an individual product on mobile which had an extended description, the bottom of the screen became transparent showing the product item list behind. This change of CSS prevents this from happening, ensuring the product description is always clear.

--- a/src/src/components/Product/Detail/Detail.css
+++ b/src/src/components/Product/Detail/Detail.css
@@ -3,7 +3,7 @@
 
 .fullHeight {
 	composes: absolute from 'styles/position.css';
-	height: 100vh;
+	min-height: 100vh;
 	width: 100%;
 	top: 0;
 	left: 0;
